# annual-wheel

./: .gitignore  README.md  docker-compose.yml
api/: .env.example  Cargo.toml  Dockerfile
api/src/: auth.rs  config.rs  crypto.rs  handlers.rs  lib.rs  main.rs  models.rs  storage.rs
teams-app/: Dockerfile  aad.manifest.json  index.html  m365agents.yml  nginx.conf  package-lock.json  package.json  staticwebapp.config.json  tsconfig.json  vite.config.ts
teams-app/appPackage/: en.json  manifest.json  nb.json  nn.json
teams-app/env/: .env.dev
teams-app/public/: auth-end.html  blank-auth-end.html
teams-app/src/: App.svelte  main.ts  vite-env.d.ts
teams-app/src/components/: ActivityPlanner.svelte  AdminSettings.svelte  AnnualWheel.svelte  ColorPicker.svelte  EmbedWheel.svelte  IconPicker.svelte  ScopeFilterPanel.svelte  ShareDialog.svelte
teams-app/src/data/: mockData.ts
teams-app/src/locales/: en.json  nb.json  nn.json  se.json
teams-app/src/services/: authService.ts  holidayService.ts  i18nService.ts  sharingService.ts  userSettingsService.ts
teams-app/src/types/: activity.ts  admin.ts  hierarchy.ts  sharing-cosmosdb.ts  sharing.ts
