[package]
name = "arshjul-api"
version = "0.1.0"
edition = "2021"
description = "Annual Wheel (Årshjul) API - Azure Functions in Rust"
license = "MIT"

[features]
default = ["key_auth"]
key_auth = []

[dependencies]
# Azure Storage (Table Storage) - uses azure_core 0.21
azure_data_tables = "0.21"
azure_storage = "0.21"
azure_core = "0.21"

# Azure Cosmos DB (with key authentication support)
azure_data_cosmos = { version = "0.29", features = ["key_auth"] }

# Azure Identity - use 0.21 for Table Storage compatibility
# (Cosmos DB 0.29 bundles its own azure_identity internally)
azure_identity = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Cryptography
rand = "0.8"
hex = "0.4"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP client (for Graph API calls)
reqwest = { version = "0.12", features = ["json"] }

# JWT validation
jsonwebtoken = "9.0"

# Environment
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4"
